--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
     <head>
         <title>Hope Udoka</title>
+        <style>
+            h1{
+                color: Green;
+            }
+        </style>
     </head>
     <body>
-        Welcome to my website!
+        <h1>Welcome to my website!</h1>
     </body>
 </html>
