change to period

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div>
             <h1> Welcome to my website! </h1>
-            <h4>My name is Hope I. Udoka and you can find everything you need to know about me here!</h4>
+            <h4>My name is Hope I. Udoka and you can find everything you need to know about me here.</h4>
             <h4>Are you ready to explore?</h4>
         </div>
         <img src="me.jpg" alt="a photo of Hope Udoka" width="200px" height="200">
