--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <img src="me.jpg" alt="a photo of Hope Udoka" width="200px" height="200">
+        <div class="container">
+            <img src="myphoto.jpg" alt="a photo of Hope Udoka">
+        </div>
     </body>
 </html>
