--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Hope Udoka</title>
         <link rel="stylesheet" type="text/css" href="style.css">
@@ -8,6 +9,19 @@
     <body>
         <div class="container">
             <img src="myphoto.jpg" alt="a photo of Hope Udoka">
+        </div>
+
+        <h1>Hope Udoka</h1>
+
+        <div class="menu_list">
+            <ul>
+                <li>Home</li>
+                <li>About me</li>
+                <li>Experience</li>
+                <li>Education</li>
+                <li>Resume</li>
+                <li>Contact me</li>
+            </ul>
         </div>
     </body>
 </html>
