--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <title>Hope Udoka</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta name="author" content="Hope Udoka">
-        <meta name="description" content="A webpage for Hope Udoka, displaying His information such as qualifications and about.">
+        <meta name="description" content="A webpage for Hope Udoka, displaying His information such as qualifications and so on.">
     </head>
     <body>
         <header>
             <div class="menu_list">
                 <nav>
                     <a href="#">Home</a>
-                    <a href="##">About Me</a>
+                    <a href="##">About</a>
                     <a href="##">Projects</a>
                     <a href="##">Education</a>
                     <a href="##">Resume</a>
-                    <a href="##">Contact Me</a>
+                    <a href="##">Contact</a>
                 </nav>
             </div>
         </header>
@@ -56,6 +56,14 @@
                 Large images or screenshots of projects.
                 Short descriptions and links for more details.
                 Navigation arrows or dots to switch between projects.
+            </p>
+        </div>
+
+        <div>
+            <h2>Education</h2>
+            <p>
+                <img src="" alt="">
+                
             </p>
         </div>
 
