--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <div>
-            <h2 id="Contact">Contact</h2>
+            <h2 id="contact">Contact</h2>
 
             <p>I want to hear from you! Please reach out to me through any method below.</p>
             <a href="#">Email</a>
