--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Hope Udoka</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
         <meta name="author" content="Hope Udoka">
         <meta name="description" content="A webpage for Hope Udoka, displaying His information such as qualifications and so on.">
     </head>
@@ -22,7 +22,7 @@
             </div>
         </header>
         <div class="container">
-            <img src="myphoto.jpg" alt="a photo of Hope Udoka">
+            <img src="images/myphoto.jpg" alt="a photo of Hope Udoka">
         </div>
 
         <h1>Software Developer</h1>
