update personal website

--- a/index.html
+++ b/index.html
@@ -7,102 +7,47 @@
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <meta name="author" content="Hope Udoka">
         <meta name="description" content="A webpage for Hope Udoka, displaying His information such as qualifications and so on.">
+        <script src="scripts/script.js" defer></script>
     </head>
     <body>
+
         <header>
-            <div class="menu_list">
+            <a class="menu-list" href="#"></a>
                 <nav>
-                    <a href="#">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#projects">Projects</a>
-                    <a href="#education">Education</a>
-                    <a href="#resume">Resume</a>
-                    <a href="#contact">Contact</a>
+                    <ul class="navigation">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="project.html">Projects</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
                 </nav>
-            </div>
         </header>
+
+        <main>
+
+        <!-- <h1>Welcome</h1> -->
         <div class="container">
-            <img src="images/myphoto.jpg" alt="a photo of Hope Udoka">
+            <img src="images/profile_pic.jpg" alt="a photo of Hope Udoka">
         </div>
 
-        <h1>Software Developer</h1>
+        <h1>Hi, I am Hope Udoka</h1>
+        <h2>A Software Developer</h2>
 
         <div>
-            <h2>Welcome to My Personal Webpage!</h2>
             <p>
-                Hi!, I am Hope Udoka, and i am delighted to have you here. This website is a reflection of my journey, showcasing my background, qualifications, and the experiences that have shaped who I am today as a Software Developer.
-                Whether you're here to learn more about my professional achievements, explore my personal interests, or connect with me, I hope you find what you're looking for. I've curated this space to provide insights into my career, 
+                This website is a reflection of my journey, showcasing my background, qualifications, and the experiences that have shaped who I am today as a Software Developer.
+                Whether you're here to learn more about my professional achievements, explore my personal interests, or connect with me, I hope you find what you're looking for. 
+            </p>
+        </div>
+        
+        <div>
+            <p>
+                I've curated this space to provide insights into my career, 
                 share the projects I'm passionate about, and offer a glimpse into the milestones that have marked my path.
                 Feel free to explore and reach out if you have any questions or if there's something you'd like to discuss. Thank you for visiting, and I look forward to connecting with you!
             </p>
         </div>
-
-        <div>
-            <h2 id="about">About Me</h2>
-            <img src="" alt="">
-            <p>
-                <!-- Hello! I'm Hope, a dedicated software developer with a strong passion for creating innovative and efficient software solutions. With a solid foundation in [Your Education or Relevant Background], I have honed my skills in [Specific Programming Languages, Technologies, or Frameworks] through various projects and professional experiences.
-                Over the years, I have successfully contributed to [Briefly Mention Key Projects or Achievements], which have strengthened my expertise in [Your Area of Expertise, e.g., web development, mobile applications, etc.]. My approach to software development is driven by a commitment to quality, attention to detail, and a focus on delivering value to users.
-                In addition to my technical skills, I thrive in collaborative environments and enjoy working with cross-functional teams to solve complex problems. My goal is to continually grow as a developer and to stay abreast of the latest industry trends and technologies.
-                Outside of work, I enjoy [Your Hobbies/Interests], which help me stay balanced and inspired. -->
-
-                I am a passionate Software Developer with a strong dedication for creating innovative and efficient software solutions. With a background in Web development and different programming languages, I specialize in Web development concepts and have a keen eye for creative problem-solving, writing clean and scalable code,
-                and following industry standard practices in my program. Over the years, I’ve worked on various projects that have allowed me to blend my technical skills with my creative vision, delivering results that not only meet but exceed expectations. My approach is centered around understanding my clients' needs and turning their ideas into reality.
-                I’m always eager to take on new challenges and collaborate with like-minded individuals who are as committed to excellence as I am. When I’m not working on projects, you can find me playing video games, taking a stroll in Nature, reading, and traveling. 
-                I look forward to connecting with you and bringing your next project to life.
-            </p>
-        </div>
-
-        <div>
-            <h2 id="projects">Projects</h2>
-
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <p>
-                Carousel/Slider Layout
-                Description: An interactive carousel that highlights projects one at a time.
-                Features:
-                Large images or screenshots of projects.
-                Short descriptions and links for more details.
-                Navigation arrows or dots to switch between projects.
-            </p>
-        </div>
-
-        <div>
-            <h2 id="education">Education</h2>
-
-            <p>School Name: Brigham Young University Idaho</p>
-            <p>Certification: Bachelor's of Science in Software Development (Expected 2027)</p>
-
-            <p>School Name: BYU Pathway</p>
-            <p>Certification: Certificate of completion</p>
-            <iframe>
-                <a href="path/to/file.pdf">BYU Pathway Certificate</a> 
-            </iframe>  
-        </div>
-
-        <div>
-            <h2 id="resume">Resume</h2>
-
-            <p>
-                Find my Official Resume here. It contains a handful of projects and
-                experiences i have had.
-            </p>
-            <iframe>
-                <a href="path/to/file.pdf" download>Download PDF</a>
-            </iframe>
-        </div>
-
-        <div>
-            <h2 id="contact">Contact</h2>
-
-            <p>I want to hear from you! Please reach out to me through any method below.</p>
-            <a href="#">Email</a>
-            <a href="#">Linkedin</a>
-            <a href="#">Facebook</a>
-            <a href="#">WhatsApp</a>
-        </div>
+        </main>
 
         <footer>
             &copy;2024 | Hope Udoka | Software Developer
