fix large screen header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Hope Udoka</title>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style-larger.css">
         <meta name="author" content="Hope Udoka">
         <meta name="description" content="A webpage for Hope Udoka, displaying His information such as qualifications and so on.">
         <script src="scripts/script.js" defer></script>
@@ -12,9 +13,12 @@
     <body>
 
         <header>
+            <!-- <h1 id="space">My Space</h1> -->
+
             <a class="menu-list" href="#"></a>
                 <nav>
                     <ul class="navigation">
+                        <li id="space">My Space</li>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="project.html">Projects</a></li>
@@ -30,7 +34,7 @@
             <img src="images/profile_pic.jpg" alt="a photo of Hope Udoka">
         </div>
 
-        <h1>Hi, I am Hope Udoka</h1>
+        <h2>Hi, I am Hope Udoka</h2>
         <h2>A Software Developer</h2>
 
         <div>
