--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Contact</title>
         <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style-larger.css">
         <meta name="author" content="Hope Udoka">
         <meta name="description" content="A webpage for Hope Udoka, displaying His information such as qualifications and so on.">
         <script src="scripts/script.js" defer></script>
@@ -14,6 +15,7 @@
             <a class="menu-list" href="#"></a>
             <nav>
                 <ul class="navigation">
+                    <li id="space">My Space</li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="project.html">Projects</a></li>
