--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <a class="menu-list" href="#"></a>
             <nav>
                 <ul class="navigation">
-                    <li id="space">My Space</li>
+                    <li id="space"><a href="about.html">About</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="project.html">Projects</a></li>
@@ -26,7 +26,7 @@
 
         <main>
             <div>
-                <h2 id="about">About Me</h2>
+                <!-- <h2 id="about">About Me</h2> -->
                 <img src="images/myphoto.jpg" alt="">
                 <p>
                     I am a passionate Software Developer with a strong dedication for creating innovative and efficient software solutions. With a background in Web development and different programming languages, I specialize in Web development concepts and have a keen eye for creative problem-solving, writing clean and scalable code,
