--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="menu-list" href="#"></a>
                 <nav>
                     <ul class="navigation">
-                        <li id="space">My Space</li>
+                        <li id="space"><a href="index.html">Home</a></li>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="project.html">Projects</a></li>
