--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
             <a class="menu-list" href="#"></a>
             <nav>
                 <ul class="navigation">
-                    <li id="space">My Space</li>
+                    <li id="space"><a href="project.html">Projects</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#">Projects</a></li>
@@ -26,7 +26,7 @@
 
         <main>
             <div>
-                <h1 id="projects">Projects</h1>
+                <!-- <h1 id="projects">Projects</h1> -->
             
                 <div class="carousel-container">
                     <div class="carousel-slide active">
