--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <a class="menu-list" href="#"></a>
             <nav>
                 <ul class="navigation">
-                    <li id="space">My Space</li>
+                    <li id="space"><a href="contact.html">Contact</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="project.html">Projects</a></li>
@@ -26,7 +26,7 @@
 
         <main>
             <div>
-                <h2 id="contact">Contact</h2>
+                <!-- <h2 id="contact">Contact</h2> -->
     
                 <p>I want to hear from you! Please reach out to me through any method below.</p>
                 <a href="#"><img class="logo" src="images/email.webp" alt="email logo"></a>
